change their value and depending on their values, execute getCubes() etc. (and also return OlapExceptions 
directly from getCubes() etc. We would not need to populate a deferred list on get(cubename).
* However, for now it works.

==5 Sep 2013==
* Restrictions now use URI representation, but also are able to convert from MDX representation.

==2 Sep 2013==
* Renamed LD_Cubes test case to "Example_QB_Datasets_QueryTest".
* Logical Olap Op DiceOp now receives List<Node[]> of cube that is
used in query processing.
* removed all errors in sources
* Deactivated not successful tests in Example_QB_Datasets_QueryTest.
* Logical Olap Op SliceOp and RollupOp now receive List<Node[]> of cube that is
used in query processing. 
* OlapOps are now completely using Node[] with URI representation (not MDX representation) as inputs

==31 Aug 2013==
* Logical Olap Op ProjectionOp now receives List<Node[]> of cube that is
used in query processing.

==30 Aug 2013==
* Logical Olap Op BaseCube now receives List<Node[]> of cube that is
used in query processing.
* Status of junit test LD_Cubes_Explorer_QueryTest.java: Only tests
related to the setDatabase problem and Edgar loading do not succeed.

==2013-08-16==
* Added methods to metadata objects to get List<Node[]> representation to be used in olap 
operators (as an interface to Linked Data Engine).

==2013-08-15==
* Logical OLAP Operators (http://www.linked-data-cubes.org/index.php/Olap4ld_Query_Optimizer)
* Changed Visitor to LogicalOlapOperatorPlanVisitor

==2013-08-14==
* If now aggregation function is found, we automatically create new measures with certain
aggregation functions (simply added aggregation fnct name to the end). 
However, WATCH OUT, BIND-syntax of SPARQL is complicated: You should not be
using the variable that you are binding to in other patterns (see, e.g., ?MEASURE_AGGREGATOR_PART)

==2013-08-07==
* Improved exception handling. Now, LinkedDataEngine also returns OlapExceptions which are forwarded